# pneumonia-xray-detection

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.dvc/: config
configs/: export.yaml  infer.yaml  serve.yaml  train.yaml
configs/data/: default.yaml
configs/logging/: mlflow.yaml
configs/model/: resnet18.yaml
configs/postprocess/: default.yaml
configs/trainer/: default.yaml
model_repository/pneumonia_xray/: config.pbtxt  metadata.json
src/pneumonia_xray/: commands.py  data.py  datamodule.py  export.py  infer.py  lightning_module.py  serve.py  train.py
