[project]
name = "pneumonia-xray"
version = "0.1.0"
description = "Pneumonia detection from chest X-ray images using deep learning"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Your Name", email = "your.email@example.com" }]
dependencies = [
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "pytorch-lightning>=2.0.0",
    "torchmetrics>=1.0.0",
    "hydra-core>=1.3.0",
    "mlflow>=2.0.0",
    "dvc>=3.0.0",
    "onnx>=1.14.0",
    "onnxruntime>=1.15.0",
    "onnxscript>=0.1.0",
    "matplotlib>=3.7.0",
    "scikit-learn>=1.3.0",
    "tritonclient[http]>=2.40.0",
]

[project.optional-dependencies]
dev = [
    "pre-commit>=3.0.0",
    "ruff>=0.8.0",
    "pytest>=7.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pneumonia_xray"]

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E203"]

[tool.ruff.lint.isort]
known-first-party = ["pneumonia_xray"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[dependency-groups]
dev = [
    "dvc[s3]>=3.65.0",
    "dvc-s3>=3.2.2",
]
